adding modal for each project and updating about

--- a/about.html
+++ b/about.html
@@ -38,12 +38,18 @@
     </div>
   </div>
   <div class="container">
-    <h1 class="text-center my-5">🎴 Celso Takeshi Yamashita 🎴</h1>
-    <p>I'm a Brazilian full-stack web developer living in Yokohama. Before moving to Japan, I used to work as a graphic designer, even though I graduated in architecture.
-      My wife and I have always dreamed about living abroad.
-      In 2018 she got a once-in-a-lifetime chance to study in Japan. I left my job, and we started our long journey to the other side of the world in search of new horizons.
-      During the past few months, I've developed some projects in Le Wagon Tokyo, and now I intend to start some personal projects to hone my coding skills.
-      I'm looking for opportunities that provide me with a solid mentorship and a foreign-friendly work environment where English is their base language.</p>
+    <div class="d-flex align-items-center flex-wrap justify-content-center mt-5">
+      <img src="images/LWT_Profile-low.png" alt="Profile picture" class="photo-round col-8 col-sm-6 col-md-6 col-lg-5 col-xl-4 mx-5">
+      <div class="d-flex flex-column justify-content-center col-10 col-sm-10 col-md-8 col-lg-8 col-xl-6 py-5">
+        <h1>Celso Takeshi Yamashita</h1>
+        <hr>
+        <p>I'm a Brazilian full-stack web developer living in Yokohama. Before moving to Japan, I used to work as a graphic designer, even though I graduated in architecture.</p>
+        <p>My wife and I have always dreamed about living abroad. In 2018 she got a once-in-a-lifetime chance to study in Japan. I left my job, and we started our long journey to the other side of the world in search of new horizons.</p>
+        <p>During the past few months, I've developed some projects in Le Wagon Tokyo, and now I intend to start some personal projects to hone my coding skills.</p>
+        <p>I'm looking for opportunities that provide me with a solid mentorship and a foreign-friendly work environment where English is their base language.</p>
+        <hr>
+      </div>
+    </div>
   </div>
   <!-- bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
