--- a/about.html
+++ b/about.html
@@ -4,29 +4,29 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="I'm a Brazilian full-stack web developer living in Japan.">
 
-  <title>Celso Takeshi Yamashita</title>
+  <title>Celso Takeshi Yamashita - Portfolio</title>
 
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="images/favicon.svg">
   <!-- bootstrap link -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <!-- fontawesome link -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
 </head>
 <body>
   <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">
         <img src="images/favicon.svg" />
-  </a>
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="/">Home</a>
-            </li>
             <li class="nav-item">
               <a class="nav-link active" href="/about.html">About</a>
             </li>
@@ -37,20 +37,55 @@
       </div>
     </div>
   </div>
-  <div class="container">
-    <div class="d-flex align-items-center flex-wrap justify-content-center mt-5">
-      <img src="images/LWT_Profile-low.png" alt="Profile picture" class="photo-round col-8 col-sm-6 col-md-6 col-lg-5 col-xl-4 mx-5">
-      <div class="d-flex flex-column justify-content-center col-10 col-sm-10 col-md-8 col-lg-8 col-xl-6 py-5">
-        <h1>Celso Takeshi Yamashita</h1>
-        <hr>
+  <div class="container my-5">
+    <h2><i class="fas fa-user-circle"></i> About</h2>
+    <hr>
+    <div class="d-flex align-items-start flex-wrap justify-content-center">
+      <img src="images/LWT_Profile-low.png" alt="Profile picture" class="photo-round col-8 col-sm-6 col-md-6 col-lg-5 col-xl-4 mt-5">
+      <div class="d-flex flex-column justify-content-center col-12 col-sm-12 col-md-8 col-lg-8 col-xl-6 p-5">
+        <h1 class="mb-5">Celso Takeshi Yamashita</h1>
         <p>I'm a Brazilian full-stack web developer living in Yokohama. Before moving to Japan, I used to work as a graphic designer, even though I graduated in architecture.</p>
         <p>My wife and I have always dreamed about living abroad. In 2018 she got a once-in-a-lifetime chance to study in Japan. I left my job, and we started our long journey to the other side of the world in search of new horizons.</p>
         <p>During the past few months, I've developed some projects in Le Wagon Tokyo, and now I intend to start some personal projects to hone my coding skills.</p>
         <p>I'm looking for opportunities that provide me with a solid mentorship and a foreign-friendly work environment where English is their base language.</p>
-        <hr>
+        <h4 class="mt-5">Tools and Languages:</h4>
+        <ul class="list-inline">
+          <li>
+            <strong> Front-end: </strong>
+            <img src="https://img.shields.io/badge/HTML5-444c55?style=for-the-badge&logo=html5&logoColor=white" alt="html" class="my-1"/>
+            <img src="https://img.shields.io/badge/CSS3-444c55?style=for-the-badge&logo=css3&logoColor=white" alt="css" class="my-1"/>
+            <img src="https://img.shields.io/badge/JavaScript-444c55?style=for-the-badge&logo=javascript&logoColor=white" alt="javascript" class="my-1"/>
+            <img src="https://img.shields.io/badge/Stimulus-444c55?style=for-the-badge&logo=stimulus&logoColor=white" alt="javascript" class="my-1"/>
+            <img src="https://img.shields.io/badge/Bootstrap-444c55?style=for-the-badge&logo=bootstrap&logoColor=white" alt="css" class="my-1"/>
+          </li>
+          <li>
+            <strong> Back-end: </strong><img src="https://img.shields.io/badge/Ruby-444c55?style=for-the-badge&logo=ruby&logoColor=white" alt="ruby" class="my-1"/>
+            <img src="https://img.shields.io/badge/Ruby_on_Rails-444c55?style=for-the-badge&logo=ruby-on-rails&logoColor=white" alt="ruby on rails" class="my-1"/>
+            <img src="https://img.shields.io/badge/PostgreSQL-444c55?style=for-the-badge&logo=postgresql&logoColor=white" alt="postgresql" class="my-1"/>
+          </li>
+          <li>
+            <strong> Others: </strong><img src="https://img.shields.io/badge/Visual_Studio_Code-444c55?style=for-the-badge&logo=visual%20studio%20code&logoColor=white" alt="visual studio code" class="my-1"/>
+            <img src="https://img.shields.io/badge/GIT-444c55?style=for-the-badge&logo=git&logoColor=white" alt="git" class="my-1"/>
+            <img src="https://img.shields.io/badge/Photoshop-444c55?style=for-the-badge&logo=adobephotoshop&logoColor=white" alt="photoshop" class="my-1"/>
+            <img src="https://img.shields.io/badge/Illustrator-444c55?style=for-the-badge&logo=adobeillustrator&logoColor=white" alt="illustrator" class="my-1"/>
+            <img src="https://img.shields.io/badge/InDesign-444c55?style=for-the-badge&logo=adobeindesign&logoColor=white" alt="illustrator" class="my-1"/>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
+
+  <div class="footer">
+    <div class="footer-links">
+      <a href="https://github.com/ctyamashita"><i class="fab fa-github"></i></a>
+      <a href="https://instagram.com/ctyamashita"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.linkedin.com/in/ctyamashita/"><i class="fab fa-linkedin"></i></a>
+    </div>
+    <div class="footer-copyright">
+      2022 Celso Takeshi Yamashita
+    </div>
+  </div>
+
   <!-- bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
