--- a/index.html
+++ b/index.html
@@ -4,29 +4,29 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="I'm a Brazilian full-stack web developer living in Japan.">
 
-  <title>Celso Takeshi Yamashita</title>
+  <title>Celso Takeshi Yamashita - Portfolio</title>
 
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="images/favicon.svg">
   <!-- bootstrap link -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <!-- fontawesome link -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
 </head>
 <body>
   <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">
         <img src="images/favicon.svg" />
-  </a>
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="/">Home</a>
-            </li>
             <li class="nav-item">
               <a class="nav-link" href="/about.html">About</a>
             </li>
@@ -37,7 +37,11 @@
       </div>
     </div>
   </div>
-  <div class="container">
+  <div class="banner" style="background-image: linear-gradient(0deg, rgba(230, 230, 230, 1) 0%, rgba(255, 255, 255, 0) 40%), url(images/IMG_20210101_071313.jpg);">
+    <div class="container d-flex flex-column justify-content-center align-items-center">
+      <a class="btn btn-cty text-white btn-cty-home" href="/projects.html">cty's works</a>
+    </div>
+  </div>
 
   <!-- bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
