--- a/projects.html
+++ b/projects.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="I'm a Brazilian full-stack web developer living in Japan.">
 
-  <title>Celso Takeshi Yamashita</title>
+  <title>Celso Takeshi Yamashita - Portfolio</title>
 
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="images/favicon.svg">
@@ -27,9 +28,6 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto">
             <li class="nav-item">
-              <a class="nav-link" href="/">Home</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="/about.html">About</a>
             </li>
             <li class="nav-item active">
@@ -39,8 +37,8 @@
       </div>
     </div>
   </div>
-  <div class="container mt-5">
-    <h2>🗂️ Projects</h2>
+  <div class="container my-5">
+    <h2><i class="fas fa-folder-open"></i> Projects</h2>
     <hr>
     <div class="cards">
       <div class="round-card" style="background: linear-gradient(156deg, rgba(0, 0, 0, .8) 0%, rgba(0, 0, 0, 0.1) 50%), url('images/og_photo.jpg'); background-size: cover; background-position: center">
@@ -65,6 +63,17 @@
         </div>
       </div>
     </div>
+    <h2 class="mt-5"><i class="fas fa-folder-open"></i> Personal Projects</h2>
+    <hr>
+    <div class="cards">
+      <div class="round-card" style="background: linear-gradient(156deg, rgba(0, 0, 0, .8) 0%, rgba(0, 0, 0, 0.1) 50%), url('images/kyuuko.png'); background-size: cover; background-position: center">
+        <p class="icon-more" data-bs-toggle="modal" data-bs-target="#kyuuko"><i class="fas fa-search-plus"></i></p>
+        <div class="round-card-text">
+          <h3>Kyuuko Cat<br>Adventures</h3>
+          <p>Explore Japan with Kyuuko!</p>
+        </div>
+      </div>
+    </div>
   </div>
 
   <!-- Modals -->
@@ -74,7 +83,7 @@
     <div class="modal-dialog modal-dialog-centered modal-xl">
       <div class="modal-content-cty">
         <div class="modal-header-cty bg-dark">
-          <h4 class="modal-title text-ronin" id="photoRoninLabel">Photo Ronin 📷</h4>
+          <h4 class="modal-title text-white" id="photoRoninLabel"><i class="fas fa-camera-retro ms-2 me-3"></i>Photo Ronin</h4>
           <button type="button" class="btn-close-white" data-bs-dismiss="modal" aria-label="Close"><i class="fas fa-times-circle"></i></button>
         </div>
         <div class="modal-body">
@@ -90,23 +99,23 @@
             </div>
             <hr>
             <div class="d-flex flex-wrap justify-content-between">
-              <div class="col-10 col-sm-10 col-md-10 col-lg-7 col-xl-7 mb-3">
+              <div class="col-12 col-sm-12 col-md-10 col-lg-7 col-xl-7 mb-3">
                 <p><strong>Tools and languages:</strong></p>
                 <ul class="list-inline">
                   <li>
-                    <strong> Front-end: </strong> <img src="https://img.shields.io/badge/Stimulus-212529?style=for-the-badge&logo=stimulus&logoColor=white" alt="javascript" class="my-1"/> |
-                    <img src="https://img.shields.io/badge/HTML5-212529?style=for-the-badge&logo=html5&logoColor=white" alt="html" class="my-1"/> |
-                    <img src="https://img.shields.io/badge/CSS3-212529?style=for-the-badge&logo=css3&logoColor=white" alt="css" class="my-1"/> |
-                    <img src="https://img.shields.io/badge/Bootstrap-212529?style=for-the-badge&logo=bootstrap&logoColor=white" alt="css" class="my-1"/>
+                    <strong> Front-end: </strong> <img src="https://img.shields.io/badge/Stimulus-444c55?style=for-the-badge&logo=stimulus&logoColor=white" alt="javascript" class="my-1"/> |
+                    <img src="https://img.shields.io/badge/HTML5-444c55?style=for-the-badge&logo=html5&logoColor=white" alt="html" class="my-1"/> |
+                    <img src="https://img.shields.io/badge/CSS3-444c55?style=for-the-badge&logo=css3&logoColor=white" alt="css" class="my-1"/> |
+                    <img src="https://img.shields.io/badge/Bootstrap-444c55?style=for-the-badge&logo=bootstrap&logoColor=white" alt="css" class="my-1"/>
                   </li>
                   <li>
-                    <strong> Back-end: </strong><img src="https://img.shields.io/badge/Ruby-212529?style=for-the-badge&logo=ruby&logoColor=white" alt="ruby" class="my-1"/> |
-                    <img src="https://img.shields.io/badge/Ruby_on_Rails-212529?style=for-the-badge&logo=ruby-on-rails&logoColor=white" alt="ruby on rails" class="my-1"/> |
-                    <img src="https://img.shields.io/badge/PostgreSQL-212529?style=for-the-badge&logo=postgresql&logoColor=white" alt="postgresql" class="my-1"/>
+                    <strong> Back-end: </strong><img src="https://img.shields.io/badge/Ruby-444c55?style=for-the-badge&logo=ruby&logoColor=white" alt="ruby" class="my-1"/> |
+                    <img src="https://img.shields.io/badge/Ruby_on_Rails-444c55?style=for-the-badge&logo=ruby-on-rails&logoColor=white" alt="ruby on rails" class="my-1"/> |
+                    <img src="https://img.shields.io/badge/PostgreSQL-444c55?style=for-the-badge&logo=postgresql&logoColor=white" alt="postgresql" class="my-1"/>
                   </li>
                   <li>
-                    <strong> Others: </strong><img src="https://img.shields.io/badge/Visual_Studio_Code-212529?style=for-the-badge&logo=visual%20studio%20code&logoColor=white" alt="visual studio code" class="my-1"/> |
-                    <img src="https://img.shields.io/badge/GIT-212529?style=for-the-badge&logo=git&logoColor=white" alt="git" class="my-1"/>
+                    <strong> Others: </strong><img src="https://img.shields.io/badge/Visual_Studio_Code-444c55?style=for-the-badge&logo=visual%20studio%20code&logoColor=white" alt="visual studio code" class="my-1"/> |
+                    <img src="https://img.shields.io/badge/GIT-444c55?style=for-the-badge&logo=git&logoColor=white" alt="git" class="my-1"/>
                   </li>
                 </ul>
               </div>
@@ -135,7 +144,7 @@
     <div class="modal-dialog modal-dialog-centered modal-xl">
       <div class="modal-content-cty">
         <div class="modal-header-cty bg-dark">
-          <h4 class="modal-title text-white" id="noCampLabel">No Camp No Life 🚌</h4>
+          <h4 class="modal-title text-white" id="noCampLabel"><i class="fas fa-shuttle-van ms-2 me-3"></i>No Camp No Life</i></h4>
           <button type="button" class="btn-close-white" data-bs-dismiss="modal" aria-label="Close"><i class="fas fa-times-circle"></i></button>
         </div>
         <div class="modal-body">
@@ -149,23 +158,23 @@
             </div>
             <hr>
             <div class="d-flex flex-wrap justify-content-between">
-              <div class="col-10 col-sm-10 col-md-10 col-lg-7 col-xl-7 mb-3">
+              <div class="col-12 col-sm-12 col-md-10 col-lg-7 col-xl-7 mb-3">
                 <p><strong>Tools and languages:</strong></p>
                 <ul class="list-inline">
                   <li>
-                    <strong> Front-end: </strong> <img src="https://img.shields.io/badge/Stimulus-212529?style=for-the-badge&logo=stimulus&logoColor=white" alt="javascript" class="my-1"/> |
-                    <img src="https://img.shields.io/badge/HTML5-212529?style=for-the-badge&logo=html5&logoColor=white" alt="html" class="my-1"/> |
-                    <img src="https://img.shields.io/badge/CSS3-212529?style=for-the-badge&logo=css3&logoColor=white" alt="css" class="my-1"/> |
-                    <img src="https://img.shields.io/badge/Bootstrap-212529?style=for-the-badge&logo=bootstrap&logoColor=white" alt="css" class="my-1"/>
+                    <strong> Front-end: </strong> <img src="https://img.shields.io/badge/Stimulus-444c55?style=for-the-badge&logo=stimulus&logoColor=white" alt="javascript" class="my-1"/> |
+                    <img src="https://img.shields.io/badge/HTML5-444c55?style=for-the-badge&logo=html5&logoColor=white" alt="html" class="my-1"/> |
+                    <img src="https://img.shields.io/badge/CSS3-444c55?style=for-the-badge&logo=css3&logoColor=white" alt="css" class="my-1"/> |
+                    <img src="https://img.shields.io/badge/Bootstrap-444c55?style=for-the-badge&logo=bootstrap&logoColor=white" alt="css" class="my-1"/>
                   </li>
                   <li>
-                    <strong> Back-end: </strong><img src="https://img.shields.io/badge/Ruby-212529?style=for-the-badge&logo=ruby&logoColor=white" alt="ruby" class="my-1"/> |
-                    <img src="https://img.shields.io/badge/Ruby_on_Rails-212529?style=for-the-badge&logo=ruby-on-rails&logoColor=white" alt="ruby on rails" class="my-1"/> |
-                    <img src="https://img.shields.io/badge/PostgreSQL-212529?style=for-the-badge&logo=postgresql&logoColor=white" alt="postgresql" class="my-1"/>
+                    <strong> Back-end: </strong><img src="https://img.shields.io/badge/Ruby-444c55?style=for-the-badge&logo=ruby&logoColor=white" alt="ruby" class="my-1"/> |
+                    <img src="https://img.shields.io/badge/Ruby_on_Rails-444c55?style=for-the-badge&logo=ruby-on-rails&logoColor=white" alt="ruby on rails" class="my-1"/> |
+                    <img src="https://img.shields.io/badge/PostgreSQL-444c55?style=for-the-badge&logo=postgresql&logoColor=white" alt="postgresql" class="my-1"/>
                   </li>
                   <li>
-                    <strong> Others: </strong><img src="https://img.shields.io/badge/Visual_Studio_Code-212529?style=for-the-badge&logo=visual%20studio%20code&logoColor=white" alt="visual studio code" class="my-1"/> |
-                    <img src="https://img.shields.io/badge/GIT-212529?style=for-the-badge&logo=git&logoColor=white" alt="git" class="my-1"/>
+                    <strong> Others: </strong><img src="https://img.shields.io/badge/Visual_Studio_Code-444c55?style=for-the-badge&logo=visual%20studio%20code&logoColor=white" alt="visual studio code" class="my-1"/> |
+                    <img src="https://img.shields.io/badge/GIT-444c55?style=for-the-badge&logo=git&logoColor=white" alt="git" class="my-1"/>
                   </li>
                 </ul>
               </div>
@@ -194,7 +203,7 @@
     <div class="modal-dialog modal-dialog-centered modal-xl">
       <div class="modal-content-cty">
         <div class="modal-header-cty bg-dark">
-          <h4 class="modal-title text-white" id="watchListLabel">Watch List 📄</h4>
+          <h4 class="modal-title text-white" id="watchListLabel"><i class="fas fa-clipboard-list ms-2 me-3"></i>Watch List</h4>
           <button type="button" class="btn-close-white" data-bs-dismiss="modal" aria-label="Close"><i class="fas fa-times-circle"></i></button>
         </div>
         <div class="modal-body">
@@ -205,7 +214,7 @@
             </div>
             <hr>
             <div class="d-flex flex-wrap justify-content-between">
-              <div class="col-10 col-sm-10 col-md-10 col-lg-7 col-xl-7 mb-3">
+              <div class="col-12 col-sm-12 col-md-10 col-lg-7 col-xl-7 mb-3">
                 <p><strong>Tools and languages:</strong></p>
                 <ul class="list-inline">
                   <li>
@@ -242,13 +251,61 @@
     </div>
   </div>
 
+  <!-- Kyuuko Modal -->
+  <div class="modal fade" id="kyuuko" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="kyuukoLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-xl">
+      <div class="modal-content-cty">
+        <div class="modal-header-cty bg-dark">
+          <h4 class="modal-title text-white" id="kyuukoLabel"><i class="fas fa-clipboard-list ms-2 me-3"></i>Kyuuko Cat Adventures</h4>
+          <button type="button" class="btn-close-white" data-bs-dismiss="modal" aria-label="Close"><i class="fas fa-times-circle"></i></button>
+        </div>
+        <div class="modal-body">
+          <img src="images/kyuuko-screenshot.png" alt="screenshots" class="w-100">
+          <div class="mx-4">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-7 col-xl-8 my-5">
+              <p>Kyuuko is a fictional cat that travels around Japan. This is my personal project of illustration and photographic documentation of ordinary, curious and interesting places around Japan.</p>
+            </div>
+            <hr>
+            <div class="d-flex flex-wrap justify-content-between">
+              <div class="col-12 col-sm-12 col-md-10 col-lg-7 col-xl-7 mb-3">
+                <p><strong>Tools and languages:</strong></p>
+                <ul class="list-inline">
+                  <li>
+                    <strong> Others: </strong>
+                    <img src="https://img.shields.io/badge/Photoshop-444c55?style=for-the-badge&logo=adobephotoshop&logoColor=white" alt="photoshop" class="my-1"/> |
+                    <img src="https://img.shields.io/badge/Illustrator-444c55?style=for-the-badge&logo=adobeillustrator&logoColor=white" alt="illustrator" class="my-1"/> |
+                    <img src="https://img.shields.io/badge/InDesign-444c55?style=for-the-badge&logo=adobeindesign&logoColor=white" alt="illustrator" class="my-1"/>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-3">
+                <p><strong>Created by:</strong></p>
+                <ul class="list-inline">
+                  <li>Celso Takeshi Yamashita</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer-cty bg-dark">
+          <a href="https://instagram.com/kyuuko_cat_adventures" target="_blank" class="btn-cty"><i class="fab fa-instagram icon-modal"></i>Instagram</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer">
+    <div class="footer-links">
+      <a href="https://github.com/ctyamashita"><i class="fab fa-github"></i></a>
+      <a href="https://instagram.com/ctyamashita"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.linkedin.com/in/ctyamashita/"><i class="fab fa-linkedin"></i></a>
+    </div>
+    <div class="footer-copyright">
+      2022 Celso Takeshi Yamashita
+    </div>
+  </div>
+
   <!-- bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
-
-<!-- <li><img src="https://img.shields.io/badge/Photoshop-212529?style=for-the-badge&logo=adobephotoshop&logoColor=white" alt="photoshop" /></li>
-<li><img src="https://img.shields.io/badge/Illustrator-212529?style=for-the-badge&logo=adobeillustrator&logoColor=white" alt="illustrator" /></li>
-<li><img src="https://img.shields.io/badge/InDesign-212529?style=for-the-badge&logo=adobeindesign&logoColor=white" alt="illustrator" /></li>
-
-<li><img src="https://img.shields.io/badge/JavaScript-212529?style=for-the-badge&logo=javascript&logoColor=white" alt="javascript" /></li> -->
