--- a/projects.html
+++ b/projects.html
@@ -62,11 +62,11 @@
           <p>Create lists for your<br>favorite movies!</p>
         </div>
       </div>
-      <div class="round-card" style="background: linear-gradient(156deg, rgba(0, 0, 0, .8) 0%, rgba(0, 0, 0, 0.1) 50%), url('images/binge-watcher-screenshot.png'); background-size: cover; background-position: center">
+      <div class="round-card" style="background: linear-gradient(156deg, rgba(0, 0, 0, .8) 0%, rgba(0, 0, 0, 0.1) 50%), url('images/binge-watcher-cover.png'); background-size: cover; background-position: center">
         <p class="icon-more" data-bs-toggle="modal" data-bs-target="#bingeWatcher"><i class="fas fa-search-plus"></i></p>
         <div class="round-card-text">
-          <h3>Binge-Watcher</h3>
-          <p>Search for your next series/movie to watch!</p>
+          <h3>Binge<br>Watcher</h3>
+          <p>Search for your next<br>series/movie to watch!</p>
         </div>
       </div>
     </div>
@@ -218,7 +218,6 @@
           <div class="mx-4">
             <div class="col-12 col-sm-12 col-md-12 col-lg-7 col-xl-8 my-5">
               <p>Watch list organizer. Save your favorite movies in lists!</p>
-              <p>This project uses omdbAPI to fetch data from movies and series.</p>
             </div>
             <hr>
             <div class="d-flex flex-wrap justify-content-between">
@@ -307,7 +306,7 @@
     <div class="modal-dialog modal-dialog-centered modal-xl">
       <div class="modal-content-cty">
         <div class="modal-header-cty bg-dark">
-          <h4 class="modal-title text-white" id="bingeWatcherLabel"><i class="fas fa-clipboard-list ms-2 me-3"></i>Binge-Watcher</h4>
+          <h4 class="modal-title text-white" id="bingeWatcherLabel"><i class="fas fa-couch ms-2 me-3"></i>Binge-Watcher</h4>
           <button type="button" class="btn-close-white" data-bs-dismiss="modal" aria-label="Close"><i class="fas fa-times-circle"></i></button>
         </div>
         <div class="modal-body">
@@ -315,6 +314,7 @@
           <div class="mx-4">
             <div class="col-12 col-sm-12 col-md-12 col-lg-7 col-xl-8 my-5">
               <p>Search for series and movies and get its detailed information.</p>
+              <p>This project uses omdbAPI to fetch data from movies and series.</p>
             </div>
             <hr>
             <div class="d-flex flex-wrap justify-content-between">
@@ -329,8 +329,8 @@
                     <img src="https://img.shields.io/badge/React-444c55?style=for-the-badge&logo=createreactapp&logoColor=white" alt="css" class="my-1"/>
                   </li>
                   <li>
-                    <strong> Others: </strong><img src="https://img.shields.io/badge/Visual_Studio_Code-212529?style=for-the-badge&logo=visual%20studio%20code&logoColor=white" alt="visual studio code" class="my-1"/> |
-                    <img src="https://img.shields.io/badge/GIT-212529?style=for-the-badge&logo=git&logoColor=white" alt="git" class="my-1"/>
+                    <strong> Others: </strong><img src="https://img.shields.io/badge/Visual_Studio_Code-444c55?style=for-the-badge&logo=visual%20studio%20code&logoColor=white" alt="visual studio code" class="my-1"/> |
+                    <img src="https://img.shields.io/badge/GIT-444c55?style=for-the-badge&logo=git&logoColor=white" alt="git" class="my-1"/>
                   </li>
                 </ul>
               </div>
