--- a/about.html
+++ b/about.html
@@ -18,9 +18,11 @@
 <body>
   <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">
-        <img src="images/favicon.svg" />
-      </a>
+      <h1>
+        <a class="navbar-brand" href="/">
+          <img src="images/favicon.svg" alt="celso portfolio"/>
+        </a>
+      </h1>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -43,11 +45,11 @@
     <div class="d-flex align-items-start flex-wrap justify-content-center">
       <img src="images/LWT_Profile-low.png" alt="Profile picture" class="photo-round col-8 col-sm-6 col-md-6 col-lg-5 col-xl-4 mt-5">
       <div class="d-flex flex-column justify-content-center col-12 col-sm-12 col-md-8 col-lg-8 col-xl-6 p-5">
-        <h1 class="mb-5">Celso Takeshi Yamashita</h1>
+        <h3 class="mb-5">Celso Takeshi Yamashita</h3>
         <p>I'm a Brazilian full-stack web developer living in Yokohama. Before moving to Japan, I used to work as a graphic designer, even though I graduated in architecture.</p>
         <p>My wife and I have always dreamed about living abroad. In 2018 she got a once-in-a-lifetime chance to study in Japan. I left my job, and we started our long journey to the other side of the world in search of new horizons.</p>
-        <p>During the past few months, I've developed some projects in Le Wagon Tokyo, and now I intend to start some personal projects to hone my coding skills.</p>
-        <p>I'm looking for opportunities that provide me with a solid mentorship and a foreign-friendly work environment where English is their base language.</p>
+        <p>During bootcamp I've developed some projects in Le Wagon Tokyo, and now I intend to start some personal projects to hone my coding skills.</p>
+        <p>Currently I'm working as a full stack web developer for Equal Entry, coding in A-frame, HTML, CSS, and JavaScript for our accessibility development projects. He is also a Teaching Assistant at Le Wagon, a coding school in Tokyo.</p>
         <h4 class="mt-5">Tools and Languages:</h4>
         <ul class="list-inline">
           <li>
