--- a/projects.html
+++ b/projects.html
@@ -18,9 +18,11 @@
 <body>
   <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">
-        <img src="images/favicon.svg" alt="logo"/>
-      </a>
+      <h1>
+        <a class="navbar-brand" href="/">
+          <img src="images/favicon.svg" alt="celso portfolio"/>
+        </a>
+      </h1>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
