name font size fix

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
     <div class="d-flex align-items-start flex-wrap justify-content-center">
       <img src="images/LWT_Profile-low.png" alt="Profile picture" class="photo-round col-8 col-sm-6 col-md-6 col-lg-5 col-xl-4 mt-5">
       <div class="d-flex flex-column justify-content-center col-12 col-sm-12 col-md-8 col-lg-8 col-xl-6 p-5">
-        <h3 class="mb-5">Celso Takeshi Yamashita</h3>
+        <h3 class="mb-5 name">Celso Takeshi Yamashita</h3>
         <p>I'm a Brazilian full-stack web developer living in Yokohama. Before moving to Japan, I used to work as a graphic designer, even though I graduated in architecture.</p>
         <p>My wife and I have always dreamed about living abroad. In 2018 she got a once-in-a-lifetime chance to study in Japan. I left my job, and we started our long journey to the other side of the world in search of new horizons.</p>
         <p>During bootcamp I've developed some projects in Le Wagon Tokyo, and now I intend to start some personal projects to hone my coding skills.</p>
