--- a/projects.html
+++ b/projects.html
@@ -603,6 +603,10 @@
     }
 
     document.querySelectorAll(".icon-more").forEach(el => el.addEventListener('keyup', openModal))
+
+    let date = new Date
+
+    document.querySelector(".footer-copyright").innerHTML = `${date.getFullYear()} Celso T. Yamashita`
   </script>
 </body>
 </html>
