adding new project

--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script type="module" src="js/projects.js"></script>
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
+  <script src="https://kit.fontawesome.com/b6f21dd2ae.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div class="bg"></div>
+  <script type="module" src="js/projects.js"></script>
 </body>
 </html>
