--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="icon" href="images/logo-05.svg">
+  <title>[Celso Yamashita] Portfolio</title>
   <link rel="stylesheet" href="css/style.css">
   <script src="https://kit.fontawesome.com/b6f21dd2ae.js" crossorigin="anonymous"></script>
 </head>
