removing unused files and finishing illustration window

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <title>[Celso Yamashita] Portfolio</title>
   <link rel="stylesheet" href="css/style.css">
   <script src="https://kit.fontawesome.com/b6f21dd2ae.js" crossorigin="anonymous"></script>
+  <link rel="prefetch" href="images/Cats.webp" />
+  <link rel="prefetch" href="images/vespa-design-01.webp" />
+  <link rel="prefetch" href="images/Untitled-1-2-02.webp" />
+  <link rel="prefetch" href="images/Untitled-2-06.webp" />
+  <link rel="prefetch" href="images/pixel-kyuuko.webp" />
+  <link rel="prefetch" href="images/kyuuko-rpg.webp" />
+  <link rel="prefetch" href="images/Bck-1.webp" />
+
 </head>
 <body>
   <script type="module" src="js/projects.js"></script>
