added hash as path to page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="prefetch" href="images/Cats.webp" />
   <link rel="prefetch" href="images/vespa-design-01.webp" />
   <link rel="prefetch" href="images/Untitled-1-2-02.webp" />
-  <link rel="prefetch" href="images/Untitled-2-06.webp" />
+  <link rel="prefetch" href="images/Untitled-2-06-1.webp" />
   <link rel="prefetch" href="images/pixel-kyuuko.webp" />
   <link rel="prefetch" href="images/kyuuko-rpg.webp" />
   <link rel="prefetch" href="images/Bck-1.webp" />
