--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       crossorigin="anonymous"
       ></a-asset-item>
     <a-asset-item id="cube-outline"
-      src="3d/cube-shadow.gltf"
+      src="3d/cube-outline.gltf"
       response-type="arraybuffer" 
       crossorigin="anonymous"
       ></a-asset-item>
