--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>[Celso Yamashita] Portfolio</title>
   <link rel="stylesheet" href="css/style.css">
   <script src="https://kit.fontawesome.com/b6f21dd2ae.js" crossorigin="anonymous"></script>
-  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+  <script src="js/aframe.min.js"></script>
   <link rel="prefetch" href="images/Cats.webp" />
   <link rel="prefetch" href="images/vespa-design-01.webp" />
   <link rel="prefetch" href="images/Untitled-1-2-02.webp" />
